@@ -1,3 +1,7 @@
+2013-8-21 Yu-Sung Su <suyusung@tsinghua.edu.cn>  
+    * DESCRIPTION (Version, Date): 0.03-11
+    * clean up DESCRIPTION and NAMESPACE, changes are in depends and imports.
+
 2013-8-16 Yu-Sung Su <suyusung@tsinghua.edu.cn>  
     * DESCRIPTION (Version, Date): 0.03-10
     * R/jags: fix a minor gug in RNGname.
@@ -199,7 +203,7 @@
 
 2008-10-7  Yu-Sung Su <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 0.01-11.
-    * R/Allclass: explicitly using setOldClass from methods::
+    * R/Allclass: explicitly using setOldClass from methods:::
     * prepare to release! 
 
 
